# aiXiv

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
aiXiv/: defaults.py  main.py  scratch.py  settings.py
aiXiv/arxiv/: arxiv.py  arxiv_categories.csv  categories.py
aiXiv/database/: db.py  tables.py
aiXiv/llm/: __init__.py  base.py  cli.py  ollama.py  papers.py  profile.py
aiXiv/static/css/: main.css  main.css.map
aiXiv/templates/: _bookmark_btn.html  _browse.html  _library.html  _library_oob.html  _profile_preview.html  _refine_slot.html  _seen_btn.html  _settings_fields.html  main.html
aiXiv/utils/: latex2html.py  timeago.py
scss/: main.scss
static/: style.css  style.css.map
static/css/: main.css  main.css.map
templates/: _browse.html  _import_response.html  _library.html  _profile_preview.html  _profile_summary.html  _settings_fields.html  _settings_models.html  main.html
