[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiXiv"
dynamic = ["version"]
description = "A personalized AI-driven arXiv digest based on your research profile"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sqlmodel>=0.0.16",
    "httpx>=0.27",
    "jinja2>=3.1",
    "markupsafe>=2.1",
    "feedparser>=6.0",
    "python-multipart>=0.0.9",
    "typer>=0.26.8",
]

[project.scripts]
aiXiv = "aiXiv.main:run"

[tool.hatch.version]
path = "aiXiv/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["aiXiv"]

[tool.hatch.build.targets.sdist]
include = ["aiXiv", "README.md"]
