[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aixiv-digest"
dynamic = ["version"]
description = "A personalized AI-driven arXiv digest based on your research profile"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sqlmodel>=0.0.16",
    "httpx>=0.27",
    "jinja2>=3.1",
    "markupsafe>=2.1",
    "feedparser>=6.0",
    "python-multipart>=0.0.9",
    "typer>=0.26.8",
]
classifiers = [
    "Framework :: FastAPI",
    "Environment :: Web Environment",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Repository = "https://github.com/haykh/aiXiv"

[project.scripts]
aiXiv = "aiXiv.main:run"

[tool.hatch.version]
path = "aiXiv/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["aiXiv"]

[tool.hatch.build.targets.sdist]
include = ["aiXiv", "README.md"]
